backend/deploy/backend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crater-web-backend
  namespace: crater
  labels:
    app: crater-web-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crater-web-backend
  template:
    metadata:
      labels:
        app: crater-web-backend
    spec:
      containers:
        - name: crater-web-backend-container
          image: mondaycha/web-backend:v0.2.19
          imagePullPolicy: IfNotPresent
          command:
            - /controller
            - --config-file=/etc/config/config.yaml
          volumeMounts:
            - name: backend-conf
              mountPath: /etc/config/config.yaml
              subPath: config.yaml
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 128Mi
      serviceAccountName: crater-web-backend
      volumes:
        - name: backend-conf
          configMap:
            name: backend-config
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crater-web-backend-svc
  namespace: crater
spec:
  selector:
    app: crater-web-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
