backend/deploy/backend/4.ingress.yaml
# web backend ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crater-web-backend-ingress
  namespace: crater
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - crater.***REMOVED***
      secretName: crater-tls-secret
  rules:
    - host: crater.***REMOVED***
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: crater-web-backend-svc
                port:
                  number: 80
---
# jobs ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crater-jobs-ingress
  namespace: crater-workspace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20480m # 20G
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - crater.***REMOVED***
      secretName: crater-tls-secret
  rules:
    - host: crater.***REMOVED***
      http:
        paths:
          # unreachable path for default backend
          - path: /jupyter/unreachable
            pathType: Prefix
            backend:
              service:
                name: unreachable-service
                port:
                  number: 80
